# internet-ti.me

./: .gitignore  .htaccess  Cargo.toml  README.md  requirements.txt  wsgi.ini  wsgi.py
.github/workflows/: codeql-analysis.yml  main.yml
cgi-bin/: image.cgi  index.cgi  test.py
css/: style.css
internet_ti_dot_me/: __init__.py
internet_ti_dot_me/static/css/: style.css
internet_ti_dot_me/static/js/: converter.js  index.js  reference.js  shared.js
internet_ti_dot_me/templates/: base.html  converter.html  index.html  reference.html
src/: main.rs
templates/: base.html  index.html  index.rs.html  reference.html
